<resources>
    <string name="app_name">Recipe Compendium</string>
    
    <!-- Login Screen -->
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="button_login">Login</string>
    <string name="error_invalid_credentials">Invalid credentials</string>
    <string name="hint_email">Email</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="button_signup">Sign Up</string>
    <string name="text_no_account">Don\'t have an account? Sign up</string>
    <string name="text_have_account">Already have an account? Log in</string>
    
    <!-- Navigation Drawer -->
    <string name="nav_drawer_open">Open navigation drawer</string>
    <string name="nav_drawer_close">Close navigation drawer</string>
    <string name="nav_home">Home</string>
    <string name="nav_favorites">Favorites</string>
    <string name="nav_logout">Logout</string>
    
    <!-- Recipe Items -->
    <string name="favorite_button">Toggle Favorite</string>
</resources>